--- a/feb8.ipynb
+++ b/feb8.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "# Q3\n",
     "# Python on its own doesn't provide abstract classes. This module provides the infrastructure for defining abstract base classes (ABCs) in Python/ Abstract Base Classes (ABCs)\n",
-    "# es are a powerful feature in Python since they help you define a blueprint for other classes that may have something in common."
+    "# abc are a powerful feature in Python since they help you define a blueprint for other classes that may have something in common."
    ]
   },
   {
